# bedrock-describe-image

./: README.md  buildspec.yaml  lambda_function.py  pyproject.toml
src/: lambda_function.py
